--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 <body>
   <h1>Ayush Choudhary</h1>
   <h2>Hey I have build my first public website..</h2>
+  <p>
+    It's me bro.. 
+    This website is visible publically....
+  </p>
 </body>
 </html>
