--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <h1>Ayush Choudhary</h1>
   <h2>Hey I have build my first public website..</h2>
   <p>
-    It's me bro.. 
+    It's me bro.. </br>
     This website is visible publically....
+    
   </p>
 </body>
 </html>
