--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 </title>Ayush Choudhary</title>
 </head>
 <body>
+  <h1 align="center"><img src="ayush.jpg" width="150px" height="150px"></img></h1>   
   <h1>Ayush Choudhary</h1>
   <h2>Hey I have build my first public website..</h2>
   <p>
-    It's me bro.. </br>
+    It's me bro.. <br>
     This website is visible publically....
     
   </p>
