--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </title>Ayush Choudhary</title>
 </head>
 <body>
-  <h1 align="center"><img src="ayush.jpg" width="150px" height="150px"></img></h1>   
+  <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
   <h1>Ayush Choudhary</h1>
   <h2>Hey I have build my first public website..</h2>
   <p>
