--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
-  <h2 align="center"><font size="5" color="white"><b>Ayush Choudhary</b></font></h2>
+  <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
   <h3>Hey I have build my first public website..</h3>
   <p>
     It's me bro.. <br>
