--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
   <h3>Hey I have build my first public website..</h3>
   <p>
-    It's me bro.. <br>
+    OK Let's get started... <br>
     This website is visible publically....
     
   </p>
