--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 </title>Ayush Choudhary</title>
+<style>
+  body{
+      background_color:#27496D;
+      
+  }
+</style>
 </head>
 <body>
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
