--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </title>Ayush Choudhary</title>
 <style>
   body{
-      background_color:#27496D;
+      background-color:#27496D;
       
   }
 </style>
