--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 </title>Ayush Choudhary</title>
 <style>
   body{
-      background-color:#27496D;
-      
+      background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");
+      background-repeat:no-repeat;
+      background-position: right top;
+      background-attachment: fixed;
+      background-size:auto;
   }
 </style>
 </head>
