--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 </title>Ayush Choudhary</title>
 <style>
   body{
+      background-color:#313131;
+     /*
       background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");
       background-repeat:no-repeat;
       background-position: right top;
       background-attachment: fixed;
-      background-size:auto;
+      background-size:auto;*/
   }
 </style>
 </head>
