--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
       background-attachment: fixed;
       background-size:auto;*/
   }
+  h3{
+    color:white;
+  }
 </style>
 </head>
 <body>
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
-  <font align="center" size="10" color="green"><b>Ayush Choudhary</b></font>
-  <h3>Hey I have build my first public website..</h3>
+  <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
+  <h3>Hey I have build my first public website...</h3>
   <p>
     OK Let's get started... <br>
     This website is visible publically....
