--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-</title>Ayush Choudhary</title>
+</title></title>
 <style>
   body{
       background-color:#313131;
@@ -11,18 +11,22 @@
       background-attachment: fixed;
       background-size:auto;*/
   }
+  h1{
+    border-radius:10%;
+  }
   h3{
     color:white;
+    text-align:center;
   }
 </style>
 </head>
 <body>
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
   <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
-  <h3>Hey I have build my first public website...</h3>
+  <h3>Hey! I am a Computer Science and Engineering Student</h3>
   <p>
-    OK Let's get started... <br>
-    This website is visible publically....
+    Let's get started... <br>
+    Currently, I am persuing my B.TECH from KIET Group of Institutions, Ghaziabad,Uttar Pradesh,India.
     
   </p>
 </body>
