--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   }
   h1{
     border-radius:10%;
+    text-align:center;
   }
   h3{
+    color:white;
+    text-align:center;
+  }
+  .intro{
     color:white;
     text-align:center;
   }
@@ -24,7 +29,7 @@
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
   <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
   <h3>Hey! I am a Computer Science and Engineering Student</h3>
-  <p>
+  <p class="intro">
     Let's get started... <br>
     Currently, I am persuing my B.TECH from KIET Group of Institutions, Ghaziabad,Uttar Pradesh,India.
     
