--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       background-attachment: fixed;
       background-size:auto;*/
   }
+  .name{
+     text-align:center;
+  }
   h1{
     border-radius:10%;
     text-align:center;
@@ -27,7 +30,7 @@
 </head>
 <body>
   <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
-  <font align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
+  <font class="name" align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
   <h3>Hey! I am a Computer Science and Engineering Student</h3>
   <p class="intro">
     Let's get started... <br>
