--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       background-attachment: fixed;
       background-size:auto;*/
   }
+  @media only screen and (max-width: 600px) {
+    body {
+         background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");
+         background-repeat:no-repeat;
+         background-position: right top;
+         background-attachment: fixed;
+         background-size:auto
+    }
+  }
   .name{
      text-align:center;
   }
@@ -29,7 +38,7 @@
 </style>
 </head>
 <body>
-  <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px"></img></h1>   
+  <h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px" ></img></h1>   
   <font class="name" align="center" size="10" color="white"><b>Ayush Choudhary</b></font>
   <h3>Hey! I am a Computer Science and Engineering Student</h3>
   <p class="intro">
