--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-attachment: fixed;
       background-size:auto;*/
   }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 650px) and (orientation: portrait) {
     body {
          background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");
          background-repeat:no-repeat;
