--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   }
   .Ayush_img{
      border-radius:20px;
+     max-width:120;
+     max-height:150;
      display: block;
      float:center;
      margin-left: auto;
@@ -27,7 +29,8 @@
   }
   .name{
      text-align:center;
-     font-size:10px;
+     font-size:40px;
+     color:white;
   }
   h1{
     border-radius:10%;
