--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   }
   .Ayush_img{
      border-radius:20px;
-     max-width:120;
-     max-height:150;
+     width:15%;
      display: block;
      float:center;
      margin-left: auto;
