--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          background-size:auto
     }
   }
-  .Ayush_img{
+  .Ayush_img.img{
      border-radius:20px;
      width:15%;
      display: block;
