--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          background-size:auto
     }
   }
-  .Ayush_img.img{
+  .Ayush_img{
      border-radius:20px;
      width:15%;
      display: block;
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="Ayush_img">
-      <img src="FaceApp_1563514076725.jpg" alt="Ayush Choudhary">
+      <img src="FaceApp_1563514076725.jpg" alt="Ayush Choudhary" style="height:150px">
   </div> 
   <!--<h1 align="center"><img src="FaceApp_1563514076725.jpg" width="150px" height="150px" ></img></h1>  -->
   <p class="name"><b>Ayush Choudhary</b></p>
