--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   }
   .Ayush_img{
      border-radius:20px;
-     width:15%;
+     width:20%;
      display: block;
      float:center;
      margin-left: auto;
      margin-right: auto;
-     width: 50%;
   }
   .Ayush_img:hover{
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      background-color:#282828;
   }
   .name{
      text-align:center;
