--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          background-repeat:no-repeat;
          background-position: right top;
          background-attachment: fixed;
-         background-size:auto;
+         background-size:400px 600px;
     }
     .name{
         font-size:20px;
