--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     body {
          background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");
          background-repeat:repeat;
-         background-position: right top;
+         background-position: left top;
          background-attachment: fixed;
-         background-size:800px 800px;
+         background-size:800px 100%;
     }
   }
     
