--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
      text-align:center;
      font-size:200%;  
      color:white;
-     background-color:#212121;
-     width:75%;
-     padding:10px 10px 10px 10px;
-     border-radius:20px;
-     margin-left:12%;
   }
   h1{
     border-radius:10%;
@@ -83,7 +78,7 @@
       font-size:10px;
       text-align: center;
     }
-    .desc{
+    .desc, .name{
         background-color:#212121;
         width:75%;
         padding:10px 10px 10px 10px;
