--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }  
     body {
          /*background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");*/
-         background-color:#2762fe;
+         background-color:#3965b9;
          background-repeat:repeat;
          background-position: left top;
          background-attachment: fixed;
@@ -91,7 +91,7 @@
         padding:10px 10px 10px 10px;
         border-radius:20px;
         margin-left:12%;
-        box-shadow:5px 4px 20px 1px #000000;
+        box-shadow:4px 2px 10px #000000;
     }  
     
     .footer{
