--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }  
     body {
          /*background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");*/
-         background-color:#3965b9;
+         background-color:#1ecbe1;
          background-repeat:repeat;
          background-position: left top;
          background-attachment: fixed;
