--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           width:100%;
       }  
     body {
-         /*background-image:url("10-104592_dark-material-design-wallpapers-material-backgrounds.jpg");*/
+         background-image:url("InkedMy Post_LI_reduced.jpg");
          background-color:#1ecbe1;
          background-repeat:repeat;
          background-position: left top;
