--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           width:100%;
       }  
     body {
-         background-image:url("InkedMy Post_LI_reduced.jpg");
+         background-image:url("InkedMy Post_LI_better.jpg");
          background-color:#1ecbe1;
          background-repeat:repeat;
          background-position: left top;
