--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         padding:10px 10px 10px 10px;
         border-radius:20px;
         margin-left:12%;
-        box-shadow:4px 2px 10px #000000;
+        box-shadow: 0px 12px 12px 0 rgba(0, 0, 0, 0.2), 5px 10px 20px 0 rgba(0, 0, 0, 0.19);
     }  
     
     .footer{
