updated profile photo.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-sign-in"></i></a>
     </div>
   <div class="w3-image">  
-      <img class="w3-image" src="FaceApp_1563514076725.jpg" alt="Ayush Choudhary" style="height:200px width:155px"> 
+      <img class="w3-image" src="IMG_20201107_000046~2.jpg" alt="Ayush Choudhary" style="height:200px width:155px"> 
       <p class="content">Ayush Choudhary</p>
   </div>
   <p class="name"><b>Ayush Choudhary</b></p>
